--- a/src/templates/rps.html
+++ b/src/templates/rps.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <b>
-    <p>A Markov chain based AI project for bachelor's in computer science at University of Helsinki.</p>
     <br>
     <div class="rpspicks">
         <form action="/rock" method="POST">
@@ -20,17 +19,26 @@
     <br>
     {% if output %}
         {% if output[0] == 0 %}
-        <p>It's a tie!</p>
+        <h3>It's a tie!</h3>
         {% elif output[0] == 1 %}
-        <p>AI wins!</p>
+        <h3>AI wins!</h3>
         {% elif output[0] == 2 %}
-        <p>Player wins!</p>
+        <h3>Player wins!</h3>
+        {% endif %}
+
+        {% if output[1] == 1 %}
+        <p>AI's pick: Rock</p>
+        {% elif output[1] == 2 %}
+        <p>AI's pick: Paper</p>
+        {% elif output[1] == 3 %}
+        <p>AI's pick: Scissors</p>
         {% endif %}
     {% else %}
-        <p>Choose your pick above</p>
+        <h3>Choose your pick above</h3>
+        <br>
     {% endif %}
-    <h3>Total score:</h3>
-    <p>Wins: {{ score[2] }}  Ties: {{ score[0] }}  Losses: {{ score[1] }}</p>
+    <br>
+    <h3>Your score: Wins: {{ score[2] }}  Ties: {{ score[0] }}  Losses: {{ score[1] }}</h3>
     <br>
     <form action="/reset" method="POST">
         <input type="submit" value="Reset">
